# DoubleDispatch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  dockerImage
ci_stuff/: docker_image
ci_stuff/git_hooks/: pre-commit
scripts/: apply_clang_format.sh  build_project.sh
src/: ConnectionDispatcher.cpp  ConnectionDispatcher.hpp  DBConnection.cpp  DBConnection.hpp  DBConnection2.cpp  DBConnection2.hpp  DBConnection3.cpp  DBConnection3.hpp  DBConnection3Caster.hpp  DBConnection4.cpp  DBConnection4.hpp  DBConnection5.cpp  DBConnection5.hpp  DBConnectionChecker.hpp  Queries.cpp  Queries.hpp
src/Assertion/: Assertion.cpp  Assertion.hpp  README.md
src/DoubleDispatch/: ConnectionDispatcher.cpp  ConnectionDispatcher.hpp  DoubleDispatch.cpp  DoubleDispatch.hpp  README.md
src/TypeStoring/: README.md  TypeStoring.cpp  TypeStoring.hpp
test/: AssertionTest.cpp  ConnectionTest.cpp  ConnectionTest2.cpp  ConnectionTest3.cpp  ConnectionTest4.cpp  ConnectionTest5.cpp  DispatchTest.cpp  DoubleDispatchTest.cpp  TypeConversionTest.cpp  TypeStoringTest.cpp
tools/: clang_format_check.sh  docker_image
tools/conan/: profile-clang  profile-gcc
tools/git_hooks/: pre-commit
tools/git_hooks_scripts/: pre_commit_script.sh
